Adicionei as cartinhas da lorena!

--- a/index.html
+++ b/index.html
@@ -18,14 +18,38 @@
         <section id="gallery-section">
             <h2>Galeria de Fotos</h2>
             <div class="gallery">
-                <img src="src/lago.jpeg" alt="Foto no lago" onclick="openModal(this)">
-                <img src="src/shopping.jpeg" alt="Foto no shopping" onclick="openModal(this)">
-                <img src="src/praia.jpeg" alt="Foto na praia" onclick="openModal(this)">
-                <img src="src/pastel.jpeg" alt="Foto no pastel" onclick="openModal(this)">
-                <img src="src/formatura.jpeg" alt="Foto da formatura" onclick="openModal(this)">
-                <img src="src/diadospais.jpeg" alt="Foto do dia dos pais" onclick="openModal(this)">
-                <img src="src/selfie.jpeg" alt="Selfie" onclick="openModal(this)">
-                <img src="src/luta.jpeg" alt="Foto da luta" onclick="openModal(this)">
+                <div class="image-container">
+                    <img src="src/lago.jpeg" alt="Foto no lago" onclick="openModal(this)">
+                    <div class="overlay">Clique em mim!</div>
+                </div>
+                <div class="image-container">
+                    <img src="src/shopping.jpeg" alt="Foto no shopping" onclick="openModal(this)">
+                    <div class="overlay">Clique em mim!</div>
+                </div>
+                <div class="image-container">
+                    <img src="src/praia.jpeg" alt="Foto na praia" onclick="openModal(this)">
+                    <div class="overlay">Clique em mim!</div>
+                </div>
+                <div class="image-container">
+                    <img src="src/pastel.jpeg" alt="Foto no pastel" onclick="openModal(this)">
+                    <div class="overlay">Clique em mim!</div>
+                </div>
+                <div class="image-container">
+                    <img src="src/formatura.jpeg" alt="Foto da formatura" onclick="openModal(this)">
+                    <div class="overlay">Clique em mim!</div>
+                </div>
+                <div class="image-container">
+                    <img src="src/diadospais.jpeg" alt="Foto do dia dos pais" onclick="openModal(this)">
+                    <div class="overlay">Clique em mim!</div>
+                </div>
+                <div class="image-container">
+                    <img src="src/selfie.jpeg" alt="Selfie" onclick="openModal(this)">
+                    <div class="overlay">Clique em mim!</div>
+                </div>
+                <div class="image-container">
+                    <img src="src/luta.jpeg" alt="Foto da luta" onclick="openModal(this)">
+                    <div class="overlay">Clique em mim!</div>
+                </div>
             </div>
         </section>
         <section id="messages-section">
@@ -41,6 +65,20 @@
                 <div class="message">Obrigado por sempre acreditar em mim e me apoiar em cada passo.</div>
                 <div class="message">As memórias que criamos juntos são tesouros que guardarei para sempre.</div>
                 <div class="message">Seu amor é o melhor presente que eu poderia ter recebido.</div>
+            </div>
+        </section>
+        <section id="kids-section">
+            <h2>Mensagem da Lorena</h2>
+            <div id="kid-message">
+                <img src="src/carta.jpeg" alt="Desenho da Lorena">
+                <img src="src/carta2.jpeg" alt="Desenho da Lorena">
+                <img src="src/dentro.jpeg" alt="Desenho da Lorena">
+
+                <video controls width="100%">
+                    <source src="src/jp.mp4" type="video/mp4">
+                    Seu navegador não suporta o elemento de vídeo.
+                </video>
+                <p>Eu te amo, papai!</p>
             </div>
         </section>
     </main>
